# Stress-test---standalone-criteria

./: .env.example  README.md
app/: agent.py  chatbot.py
docs/: getting-started.md
docs/lessons-learned/: session-template.md
outputs/: README.md
outputs/examples/: example-access-review-output.md
outputs/schemas/: finding-schema.json
outputs/templates/: audit-report-template.md  findings-log-template.csv
prompts/: README.md
prompts/audit-use-cases/: access-review.md  journal-entry-testing.md
prompts/conventions/: prompt-template.md
prompts/system-instructions/: claude.md  copilot-instructions.md
regulatory/: README.md
regulatory/frameworks/: iso27001-control-mapping.md  nis2-control-mapping.md
regulatory/guardrails/: allowed-commands.md
regulatory/policies/: ai-usage-policy-template.md
standalone-check/: .gitignore  pyproject.toml
standalone-check/standalone_check/: cli.py  llm_pass.py  reporter.py  verdict.py  web.py
standalone-check/standalone_check/scanner/: config_files.py  python_ast.py  ripgrep.py  signals.py
standalone-check/tests/: test_new_signals.py  test_python_ast.py  test_reporter.py  test_verdict.py
standalone-check/tests/fixtures/proj_anthropic/: agent.py
standalone-check/tests/fixtures/proj_assistants/: agent.py
standalone-check/tests/fixtures/proj_env_driven/: agent.py
standalone-check/tests/fixtures/proj_hardcoded/: agent.py
standalone-check/tests/fixtures/proj_partial/: agent.py
tools/: README.md
tools/apis/: example_api_connector.py
tools/automation/: file_organizer.py
(+2 files in other folders)
